<resources>
    <string name="app_name">Student Credit Card Mockup</string>
    <string name="login_button">LOGIN</string>
    <string name="help_button">HELP</string>
    <string name="email">Email</string>
    <string name="password_text">Password</string>
    <string name="not_registered_text">Not registered yet? Forgot your password? Click below.</string>
    <string name="forgot_email">Forgot your email?</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="register_account">Need to register an account?</string>
    <string name="resetEmailButton">RESET EMAIL</string>
    <string name="resetPasswordButton">RESET PASSWORD</string>
    <string name="registerAccountButton">REGISTER</string>
    <string name="rememberEmail">Remember email</string>
    <string name="firstNameText">First Name:</string>
    <string name="lastNameText">Last Name:</string>
    <string name="cardNoText">Credit Card No.:</string>
    <string name="ssnText">Social Security Number:</string>
    <string name="dobText">Date of Birth:</string>
    <string name="userIdText">User ID:</string>
    <string name="passwordFirstText">Password:</string>
    <string name="passwordSecondText">Verify password:</string>
    <string name="registerButton">REGISTER</string>
    <string name="cancelButton">CANCEL</string>
    <string name="selectTransaction">Transaction History</string>
    <string name="settings">SETTINGS</string>
    <string name="dailySpending">Daily Spending Tracking</string>
    <string name="currentBalance">Current Balance</string>
    <string name="rewards">Rewards</string>
    <string name="accountBalance">Account Balance</string>
    <string name="pendingText">Pending Transactions</string>
    <string name="completedText">Completed Transactions</string>
    <string name="submitButton">SUBMIT</string>
    <string name="logoutButton">LOGOUT</string>
    <string name="creditAvailable">Credit Available: </string>
    <string name="spentToday">Daily Spending: </string>
    <string name="creditAvailableHistory">Credit Available: </string>
    <string name="business">Business:</string>
    <string name="backButton">BACK</string>
    <string name="needHelpText">Member Service: 800-247-5626</string>
    <string name="phoneNumberDomestic"></string>
    <string name="PenFedEmailText">PenFed Email: mobilebanking@penfed.org</string>
    <string name="overseasDial">Overseas Direct Dial: 541-225-6700</string>
    <string name="phoneNumberInternational"></string>
    <string name="penfedEmail"></string>
    <string name="nextButton">NEXT</string>
    <string name="dobHeader">Date of Birth</string>
    <string name="ccInfo">Credit Card Information</string>
    <string name="loginCredentials">Login Credentials</string>
    <string name="finishButton">FINISH</string>
</resources>
