<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/login_button"
        android:layout_below="@+id/rememberEmailCheckBox"
        android:layout_alignStart="@+id/helpButton" />

    <EditText
        android:id="@+id/userIdField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userIdField"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_text"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/help_button" />

    <CheckBox
        android:id="@+id/rememberEmailCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:text="@string/rememberEmail" />

</RelativeLayout>