<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/backButton"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/nextButton"/>

    <EditText
        android:id="@+id/ccEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:digits="0123456789-"
        android:ems="15"
        android:gravity="center_horizontal|center"
        android:hint="Credit Card Number..."
        android:inputType="number"
        android:maxLength="19"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/ssnEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ccEntry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:digits="0123456789-"
        android:ems="15"
        android:gravity="center_horizontal|center"
        android:hint="Social Security Number..."
        android:inputType="number"
        android:maxLength="11"/>

    <TextView
        android:id="@+id/ccHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/ccInfo"
        android:textSize="24sp"/>
</RelativeLayout>