<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/backButton"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/nextButton"/>

    <EditText
        android:id="@+id/birthYearEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthDaySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="45dp"
        android:ems="8"
        android:gravity="center_vertical|center_horizontal"
        android:hint="Birth Year..."
        android:inputType="number"/>

    <Spinner
        android:id="@+id/birthDaySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:gravity="center_horizontal|center_vertical|center"
        android:layout_below="@+id/birthMonthSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"/>

    <Spinner
        android:id="@+id/birthMonthSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="137dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/dobText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/dobHeader"
        android:textSize="24sp"/>
</RelativeLayout>