<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:ems="12"
        android:gravity="center_vertical|center_horizontal"
        android:hint="Email Address..."
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:ems="12"
        android:gravity="center_vertical|center_horizontal"
        android:hint="Password..."
        android:inputType="textPassword"
        android:layout_below="@+id/emailEntry"
        android:layout_alignStart="@+id/passwordVerifyEntry"/>

    <EditText
        android:id="@+id/passwordVerifyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="12"
        android:gravity="center_horizontal"
        android:hint="Verify Password..."
        android:inputType="textPassword"
        android:layout_below="@+id/passwordEntry"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/backButton"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/finishButton"/>

    <TextView
        android:id="@+id/loginCredentialsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/loginCredentials"
        android:textSize="24sp"/>
</RelativeLayout>